Fix faq spacing

--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ address {
     flex-flow: row wrap;
     margin: 0;
    }
-   
+
 
    header figure {
     width: 60%;
@@ -403,15 +403,15 @@ input[type=button] {
    ========================================================================== */
    .faq {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: #527158;
    }
 
    .faq .content-wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
     margin: 50px 0 0 0;
@@ -420,6 +420,7 @@ input[type=button] {
    .faq h2 {
     margin-bottom: 40px;
     line-height: 1;
+
   }
 
   .faq-content {
@@ -701,6 +702,7 @@ footer .copyright {
 
    .faq-content {
     flex-basis: 45%;
+    
    }
 
    .faq h2 {
@@ -710,6 +712,7 @@ footer .copyright {
    .faq h4, .faq p {
     font-size: .875em;
     line-height: 1.125;
+    justify-content: space-evenly;
    }
 
   
